fixed associated styling for aligning the icon to center

--- a/src/Projects/Projects.css
+++ b/src/Projects/Projects.css
@@ -1,5 +1,5 @@
 .projects{
-    height: 980px;
+    height: 900px;
     display: flex;
     text-align: center;
     flex-direction: column;
@@ -7,6 +7,7 @@
 
 .project__img{
     align-items: center;
+    margin-bottom: 20px;
     width: 500px;
 }
 
@@ -40,6 +41,9 @@
 
     .projects{
         height: 1210px;
+    }
+    .project__img{
+        width: 300px;
     }
 
     .project__row{
